# JobApply

./: .env.example  .gitignore  README.md  code  dev_notes.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/accounts/: adapters.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py  views_turnstile.py
apps/accounts/migrations/: 0001_initial.py
apps/applications/: forms.py  models.py  urls.py  views.py
apps/applications/migrations/: 0001_initial.py  0002_alter_jobapplication_applied_at.py  0003_alter_jobapplication_recruiter_reply_at.py
apps/interviews/: forms.py  models.py  urls.py  views.py
apps/interviews/migrations/: 0001_initial.py  0002_remove_interviewevent_ends_at.py  0003_interviewevent_status.py
apps/reports/: adapters.py  drive.py  models.py  services.py  urls.py  views.py
apps/reports/migrations/: 0001_initial.py
apps/security/: middleware.py  turnstile.py
config/: settings.py  urls.py
docker/web/: Dockerfile  entrypoint.sh
fixtures/: applications.json
static/css/: applications.css  landing.css  navbar.css
static/js/: navbar.js
templates/: base.html  landing.html
templates/account/: logout.html
templates/accounts/: consent.html  google_login_gate.html
templates/applications/: delete.html  detail.html  form.html  list.html
templates/includes/: navbar.html
templates/interviews/: delete.html  form.html  list.html
templates/reports/: _nav.html  drive_backups.html  import.html  statistics.html
templates/socialaccount/: login.html
tests/: test_drive.py
(+4 files in other folders)
