[project]
name = "jobapply"
version = "0.1.0"
description = ""
authors = [
    {name = "maxx",email = "m.petrykin@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
